--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,43 @@
   font-size: 35px;
 }
 
+.button-arrangement {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  /* flex-wrap: wrap; */
+}
+
+.numbers-btn-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.operators-btn-container {
+  /* border: 3px solid green; */
+  /* transform: rotate(90deg); */
+}
+
+.left {
+  display: flexbox;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.right {
+  padding-left: 25px;
+}
+
+.special-btn-container {
+  border: 3px solid black;
+  display: flex;
+  justify-content: space-between;
+}
+
 /* .App {
   background-color: green;
 } */
